Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,4 @@
-"Mythbusters"
-"The Office"
-"Parks and Recreation"
-"Survivor"
+<li>"Mythbusters"</li>
+<li>"The Office"</li>
+<li>"Parks and Recreation"</li>
+<li>"Survivor"</li>
